<resources>
    <string name="app_name">ModelPaper</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="updatePro">Update Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
</resources>
